# messygit

./: ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
evals/: README.md  __init__.py  changelog_eval.py  commit_eval.py  core.py  fixtures.py  suggest_eval.py
evals/results/changelog/: 2026-07-01_22-15-24.md
evals/results/commit/: 2026-06-26_23-26-23.md
evals/results/suggest/: 2026-07-01_22-16-20.md  2026-07-01_22-32-01.md  2026-07-01_22-36-50.md
messygit/: agent.py  cli.py  config.py  git.py  llm.py  models.py  prompts.py  usage.py
messygit/agent/: agent.py  tool.py  tools.py
messygit/commands/: account_cmds.py  agent_cmds.py  app_cmds.py  git_cmds.py  trace.py  usage.py
messygit/ui/: banner.py  output.py  spinner.py  theme.py
tests/: agent_test.py  config_test.py  git_test.py  llm_test.py  tool_schema_test.py  trace_test.py  verbose_test.py
