[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "messygit"
version = "0.1.0"
description = "Analyzes your staged changes and generates clean Conventional Commits messages."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.39.0",
    "click>=8.0",
]

[project.scripts]
messygit = "messygit.cli:main"
