[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "messygit"
version = "0.1.3"
description = "CLI that drafts Conventional Commits from staged git diffs with Claude, then commit, cancel, or edit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.39.0",
    "click>=8.0",
]

[project.scripts]
messygit = "messygit.cli:main"
