[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "messygit"
version = "0.2.1"
description = "An AI-powered interactive git CLI with agentic tools for commits, code suggestions, and workflow automation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.39.0",
    "click>=8.0",
]

[project.scripts]
messygit = "messygit.cli:main"
